            - Routine isAugTriSolidTorus() is now called recognise(), and
              returns a std::unique_ptr instead of a raw pointer.
              The old name is kept as a deprecated alias.
            - Added copy construction and copy assignment.
            - Added member and global swap() functions.
            - Deprecated clone().  Just use the copy constructor instead.
        Class BanConstraintNone:
            - No longer derives from BanConstraintBase; instead this is
              intended as a trivial drop-in replacement.
        Class Base64SigEncoding:
            - New helper class that provides code common to isomorphism
              signatures and knot signatures.
        Class BitManipulator and related classes:
            - The class constants ...::specialised are now constexpr bools,
              not enum values.
        Class Bitmask, Bitmask1, Bitmask2:
            - Added compile-time constant fixedSize.
            - Added != to complement the already-existing == operator.
            - Bitmask now has a move constructor, move assignment, and
              member and global swap() functions.
        Class BitmaskLen8, BitmaskLen16, BitmaskLen32, BitmaskLen64:
            - Deprecated.  Just use Bitmask1<uint8_t>, etc.
        Class BlockedSFS, BlockedSFSLoop, BlockedSFSPair, BlockedSFSTriple:
            - Routines isBlockedSFS...() are now called recognise(), take their
              triangulation arguments by const reference (not pointer), and
              return a std::unique_ptr instead of a raw pointer.
              The old names are kept as deprecated aliases.
            - Added copy/move construction and copy/move assignment.
            - Added member and global swap() functions.
            - Changed BlockedSFS::isPluggedIBundle() to take no arguments,
              and instead return a std::optional<std::string>.
        Class BoolSet:
            - Almost everything in this class is now constexpr.